--- a/src/drop-down/drop-down.component.html
+++ b/src/drop-down/drop-down.component.html
@@ -1,5 +1,8 @@
-<div class="igx-drop-down" igxToggle (onOpening)="onToggleOpening()" (onOpened)="onToggleOpen()" (onClosed)="onToggleClose()">
-    <ng-container *ngIf="!toggleDirective.collapsed">
-        <ng-content></ng-content>
-    </ng-container>
+<div class="igx-drop-down">
+    <div class="igx-drop-down__list" igxToggle (onOpening)="onToggleOpening()" (onOpened)="onToggleOpen()" (onClosed)="onToggleClose()">
+        <ng-container *ngIf="!toggleDirective.collapsed">
+            <ng-content></ng-content>
+        </ng-container>
+    </div>
 </div>
+
