chore(igxDropDown): add comments to public API

--- a/demos/app/drop-down/sample.component.html
+++ b/demos/app/drop-down/sample.component.html
@@ -3,7 +3,7 @@
     <section class="sample-content">
 
         <button igxButton="raised" igxRipple (click)="toggleDropDown()">Toggle</button>
-        <igx-drop-down (onSelection)="onSelection($event)">
+        <igx-drop-down (onSelection)="onSelection($event)" (onOpening)="onOpening($event)">
             <igx-drop-down-item *ngFor="let item of items" isDisabled={{item.disabled}} isHeader={{item.header}}>
                 <div  class="igx-drop-down__item-template">
                     {{ item.field }}
